# arxiv-bluesky-bot

./: .env.example  CLAUDE.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml  post.yml
src/: arxiv.rs  bluesky.rs  config.rs  format.rs  main.rs
